5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1826_3181.log
== TEST (2019-06-12 18:49:28) 
-- CODE:
from numpy import*
vet= array(eval(input("digite os números:")))
i= 36
for (i) in range[0, 36]
print(vet)
-- ERROR:
File "XXXX", line 4
    for (i) in range[0, 36]
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:51:44) 
-- CODE:
from numpy import*
vet= array(eval(input("digite os números:")))
n= 36


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:52:04) 
-- CODE:
from numpy import*
vet= array(eval(input("digite os números:")))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:52:23) 
-- CODE:
from numpy import*
vet= array(eval(input("digite os nnmeros:")))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:53:11) 
-- CODE:
from numpy import*
vet= array(eval(input("digite os numeros:")))
print(vet(zeros))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:53:46) 
-- CODE:
from numpy import*
vet= array(eval(input("digite os numeros:")))
print(ones.(vet))



-- ERROR:
File "XXXX", line 3
    print(ones.(vet))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:54:03) 
-- CODE:
from numpy import*
vet= array(eval(input("digite os numeros:")))
print(ones.vet)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:21:37) 
-- CODE:
from numpy import*
vet= array(eval(input("digite os numeros:")))
for i in range(0, 36)



-- ERROR:
File "XXXX", line 3
    for i in range(0, 36)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:21:59) 
-- CODE:
from numpy import*
vet= array(eval(input("digite os numeros:")))
for i in [0, 36]



-- ERROR:
File "XXXX", line 3
    for i in [0, 36]
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
